Add One More Point

--- a/LG Task Assignment/Views/Home/Index.cshtml
+++ b/LG Task Assignment/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class=" text-center bg-gradient">
 
-    <h1>Welcome To AhmedHalim Task </h1>
+    <h1 class="text-center text-dark p-5 mt-5">Linked gates helps IT department to sort out and organize their devices to have everything documented about their employees.</h1>
 
     
 </div>
